--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.9.2",
     "@react-pdf/renderer": "^3.1.6",
     "aos": "^2.3.4",
     "axios": "^1.3.4",
